--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 .chart div {
   font: 10px sans-serif;
-  background-color: steelblue;
+  background-color: red;
   text-align: right;
   padding: 3px;
   margin: 1px;
